# realitme-charts-with-esp32-over-Websocket

./: .gitignore  LICENSE  README.md  sdkconfig
components/SSD1306_Driver/inc/: ssd1306.h
components/SSD1306_Driver/src/: ssd1306.c
components/ble_gatt_server/: CMakeLists.txt
components/ble_gatt_server/inc/: ble_app_components.h  ble_app_thread.h
components/ble_gatt_server/src/: ble_app_components.c  ble_app_thread.c
main/: CMakeLists.txt  dashboard_server.c  main.c  main.h
main/mpu6050_driver/: mpu60x0.c
main/web_interface/: chart.js  index.html  index.js
main/websocket_server_api/: websocket_server.c  websocket_server.h
main/wifi/: wifi.c  wifi.h
